Fix codemagic.yaml syntax: change email children to notify key

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -18,8 +18,8 @@ workflows:
     artifacts:
       - build/app/outputs/flutter-apk/*.apk
     publishing:
-      email:
         recipients:
           - tuncerdabak@gmail.com
-        success: true
-        failure: true
+        notify:
+          success: true
+          failure: true
