Fix codemagic.yaml: restore email key and correct indentation

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -18,8 +18,9 @@ workflows:
     artifacts:
       - build/app/outputs/flutter-apk/*.apk
     publishing:
+      email:
         recipients:
-          - tuncerdabak@gmail.com
+          - tuncer_dabak@yahoo.com
         notify:
           success: true
           failure: true
