--- a/webview-app/android/build.gradle
+++ b/webview-app/android/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id "com.android.application" version "8.2.1" apply false
-    id "org.jetbrains.kotlin.android" version "2.0.21" apply false
-    id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
+    id "com.android.application" apply false
+    id "org.jetbrains.kotlin.android" apply false
+    id "dev.flutter.flutter-gradle-plugin" apply false
 }
 
 rootProject.buildDir = '../build'
