--- a/webview-app/android/settings.gradle
+++ b/webview-app/android/settings.gradle
@@ -21,6 +21,8 @@ pluginManagement {
 }
 
 plugins {
+    id "com.android.application" version "8.2.1" apply false
+    id "org.jetbrains.kotlin.android" version "2.0.21" apply false
     id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
 }
 
