--- a/webview-app/android/settings.gradle
+++ b/webview-app/android/settings.gradle
@@ -20,9 +20,17 @@ pluginManagement {
     }
 }
 
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
 plugins {
-    id "com.android.application" version "8.2.1" apply false
-    id "org.jetbrains.kotlin.android" version "2.0.21" apply false
+    id "com.android.application" version "8.6.0" apply false
+    id "org.jetbrains.kotlin.android" version "2.1.0" apply false
     id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
 }
 
