fix: switch to classic allprojects repository configuration for Flutter compatibility

--- a/webview-app/android/build.gradle
+++ b/webview-app/android/build.gradle
@@ -12,6 +12,14 @@ subprojects {
     project.evaluationDependsOn(':app')
 }
 
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://storage.googleapis.com/download.flutter.io' }
+    }
+}
+
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
