Fix launcher icons: Use flutter_launcher_icons package with proper icon file

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -12,6 +12,9 @@ workflows:
       - name: Get Flutter packages
         script: |
           flutter pub get
+      - name: Generate launcher icons
+        script: |
+          dart run flutter_launcher_icons
       - name: Build Android APK
         script: |
           flutter build apk --release --split-per-abi
